Fix overflow for popup in mobile

--- a/style.css
+++ b/style.css
@@ -955,8 +955,3 @@ button:hover {
 .hide-template {
   display: none;
 }
-
-
-*{
-  border: 1px solid green;
-}
